# Curiosity-Driven-RL-for-JSP

./: .gitignore  [example]wandb_api_key_file  _env_exported_requirements.txt  min_req.txt  pyproject.toml  readme.md  requirements.txt  setup.cfg  tox.ini
src/jss_graph_env/: disjunctive_graph_jss_env.py  disjunctive_graph_jss_visualizer.py
src/jss_rl/: analysis.py
src/jss_rl/basic_env_interaction/: manual_scheduling.py  naive_performance_test.py  random_action_loop.py
src/jss_rl/basic_interaction/: left_shift_example.py  minimal_custom_jsp_example.py  random_action_loop.py  trivial_schedule.py
src/jss_rl/heuristics/: analysis.py
src/jss_rl/human_interaction/: console_manual_scheduling.py  manual_scheduling.py
src/jss_rl/muzero/: cartpole.py  disjunktive_graph_jss.py
src/jss_rl/rllib/: curiosity_ppo.py  curisoity_mask_ppo.py  episodic_curiosity_exploration.py  frozenlake_ec_ppo.py  frozenlake_icm_ppo.py  frozenlanke_wb_ppo.py  icm2.py  jss_action_mask_model.py  (+11 more)
src/jss_utils/: DEPRACTED_jsp_custom_instance_generator.py  PATHS.py  banner.py  jsp_custom_instance_generator.py  jsp_env_utils.py  jsp_instance_details.py  jsp_instance_downloader.py  jsp_instance_parser.py  jsp_or_tools_solver.py  jss_logger.py  wandb_export.py
tests/: conftest.py  test_env_utils.py  test_jss_env.py  test_or_tools_solver.py  test_rllib_frozenlake.py  test_rllib_minigrid.py  test_sb3_frozenlake_experiments.py
tests_ignore/: test_basic_jss_env_interaction.py  test_curiosity_info_wrapper.py  test_heuristics.py  test_jsp_benchmark_instances.py  test_jsp_parser.py  test_jss_generator.py  test_rllib_jss.py  test_rllib_jss_experiment.py  test_sb3_ec_wrapper.py  test_sb3_icm_wrapper.py  test_sb3_jss_examples.py  test_sb3_video_recording_estimator.py
(+150 files in other folders)
