[metadata]
name = MA JSS
description = todo
author = Alexander Nasuta
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    jss_graph_env
    jss_rl
    # not sure if this is the correct way to add submodules
    jss_rl.heuristics
    jss_rl.heuristics.graph_domain
    jss_rl.heuristics.time_domain
    jss_rl.rllib
    #
    jss_rl.sb3
    jss_rl.sb3.jss_exsamples
    jss_rl.sb3.curiosity_modules
    jss_utils
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
jss_graph_env = py.typed
jss_rl = py.typed
jss_utils = py.typed

[flake8]
max-line-length = 160